fixed white space issue

--- a/pamGallery/src/index.css
+++ b/pamGallery/src/index.css
@@ -3,6 +3,13 @@
   margin: 0;
   padding: 0;
 }
+html,body{
+  width: 100%;
+  height: 200%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden
+}
 
 @tailwind base;
  @tailwind components;
